[package]
name = "callback-result"
version = "0.1.1"
edition = "2021"
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/wugren/callback-result.git"
description = "Assists in converting the callback function's method of obtaining results into the await method"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-future = "0.1.1"
async-std = "1.12.0"
